whitespace fix

--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,7 +1,6 @@
 .lead__title {
   width: 100%;
   margin: 0 auto 32px;
-  font-size: 96px;
   font-family: 'Inter', sans-serif;
   font-size: 96px;
   line-height: 100px;
